<resources>
    <string name="app_name">Unit Converter</string>
    <string name="tv1Text">Unit Converter</string>
    <string name="tv2Text">-></string>
    <string name="btnText">Convert</string>
    <string name="inputText">0</string>
    <string name="inputPrompt">Choose</string>
    <string name="hint">Enter any value</string>
    <string name="chkRound">Rounded</string>
    <string name="chkForm">Show Formula</string>
    <string name="rbDist">Distance</string>
    <string name="rbTemp">Temperature</string>
    <string name="rbWeight">Weight</string>

    <string-array name="tempList">
        <item type="array">°C;°F;K</item>


    </string-array>


</resources>