<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:layout_height="match_parent"
    android:background="@color/viewBgColor">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/myTextView1"
        android:layout_height="30pt"
        android:layout_width="match_parent"
        android:text="@string/tv1Text"
        android:textColor="@color/textColor"
        android:textSize="14pt"
        android:gravity="center"
        android:fontFamily="@font/cambria"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:layout_below="@+id/myTextView1"
        android:background="@color/btnColor"
        android:fontFamily="@font/lucida"
        android:text="@string/btnText"
        android:textColor="@color/textColor"
        android:textSize="11pt" />
    <Space
        android:id="@+id/space1"
        android:layout_height="5pt"
        android:layout_width="match_parent"
        android:layout_below="@+id/convertButton"/>

    <LinearLayout
        android:id="@+id/child1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/space1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/inputText"
            android:layout_width="0dip"
            android:layout_height="20pt"
            android:layout_weight="0.2"
            android:background="@color/etBgColor"
            android:fontFeatureSettings="@font/cambria"
            android:gravity="center"
            android:hint="@string/hint"
            android:inputType="number"
            android:text="@string/inputText"
            android:textColor="@color/textColor"
            android:textSize="10pt"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/oriList"
            android:layout_width="0dip"
            android:layout_height="20pt"
            android:layout_weight="0.24"
            android:entries="@array/tempList"
            android:gravity="center"
            android:prompt="@string/inputPrompt"
            android:spinnerMode="dialog"

            />
        <TextView
            android:id="@+id/myTextView2"
            android:layout_height="20pt"
            android:layout_width="0dip"
            android:layout_weight="0.12"
            android:text="@string/tv2Text"
            android:textColor="@color/textColor"
            android:textSize="14pt"
            android:textStyle="bold"
            android:fontFamily="@font/cambria"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/outputText"
            android:layout_height="20pt"
            android:layout_width="0dip"
            android:layout_weight="0.2"
            android:text="@string/inputText"
            android:textColor="@color/textColor"
            android:textSize="10pt"
            android:textStyle="bold"
            android:fontFamily="@font/cambria"
            android:gravity="center"
            android:background="@color/etBgColor"
            android:inputType="number"
            android:enabled="false"
            />
        <Spinner
            android:id="@+id/convList"
            android:layout_height="20pt"
            android:layout_width="0dip"
            android:layout_weight="0.24"
            android:entries="@array/tempList"
            android:prompt="@string/inputPrompt"
            android:spinnerMode="dialog"
            android:gravity="center"
            />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/child2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/child1"
        android:orientation="horizontal"
        android:layout_marginTop="5pt">

        <CheckBox
            android:id="@+id/chkRounded"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/chkRound"
            android:textSize="8pt"
            android:checked="true"
            android:gravity="center" />
        <CheckBox
            android:id="@+id/chkFormula"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/chkForm"
            android:textSize="8pt"
            android:gravity="center" />



    </LinearLayout>





</RelativeLayout>